<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".LocalFragment">


    <androidx.cardview.widget.CardView
        android:id="@+id/cdFindExpressTrain"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        app:cardCornerRadius="8dp"
        app:cardElevation="4dp"
        app:contentPadding="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <EditText
                android:id="@+id/etFrom"
                android:layout_width="0dp"
                android:layout_height="48dp"
                android:layout_margin="2dp"
                android:autofillHints=""
                android:background="@null"
                android:drawableEnd="@drawable/ic_clear"
                android:hint="@string/from"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


            <View
                android:id="@+id/verticalLine"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_margin="12dp"
                android:background="#D3D3D3"
                app:layout_constraintTop_toBottomOf="@id/etFrom"
                tools:layout_editor_absoluteX="12dp" />

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/btnSwap"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_marginEnd="50dp"
                android:src="@drawable/ic_arrow_downward"
                android:text="@string/find_trains"
                app:backgroundTint="@color/white"
                app:borderWidth="2dp"
                app:cornerRadius="30dp"
                app:fabSize="normal"
                app:layout_constraintBottom_toBottomOf="@id/verticalLine"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@id/verticalLine" />

            <EditText
                android:id="@+id/etTo"
                android:layout_width="0dp"
                android:layout_height="48dp"
                android:layout_margin="2dp"
                android:autofillHints=""
                android:background="@null"
                android:drawableEnd="@drawable/ic_clear"
                android:hint="@string/to"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/verticalLine" />


            <Button
                android:id="@+id/btnFindTrains"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="10dp"
                android:backgroundTint="@color/green"
                android:text="@string/find_trains"
                android:textColor="@color/white"
                app:cornerRadius="5dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/etTo" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cvStation"
        android:layout_width="0dp"
        android:layout_height="100dp"
        android:layout_margin="16dp"
        app:cardCornerRadius="8dp"
        app:cardElevation="4dp"
        app:contentPadding="5dp"
        android:backgroundTint="@color/primary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cdFindExpressTrain">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:backgroundTint="@color/white"
            android:elevation="5dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/cdFindExpressTrain">

            <TextView
                android:id="@+id/tvStationIndicator"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                android:text="@string/station"
                android:textColor="@color/white"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/etStationName"
                android:layout_width="0dp"
                android:layout_height="48dp"
                android:layout_margin="2dp"
                android:autofillHints=""
                android:background="@drawable/edittext_design"
                android:drawableEnd="@drawable/ic_clear"
                android:hint="@string/station_name"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvStationIndicator" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>


    <androidx.cardview.widget.CardView
        android:id="@+id/cvBottomSheet"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:contentPadding="15dp"
        android:elevation="10dp"
        app:cardCornerRadius="8dp"
        android:backgroundTint="@color/hallow_blue"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/local_train_map"
            android:textSize="15sp"
            android:textAlignment="center"
            android:textColor="@color/primary"
            app:drawableStartCompat="@drawable/ic_arrow_up" />

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>