<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".ExpressFragment">

    <androidx.cardview.widget.CardView
        android:id="@+id/cdFindExpressTrain"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        app:cardCornerRadius="8dp"
        app:cardElevation="4dp"
        app:contentPadding="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <EditText
                android:id="@+id/etFrom"
                android:layout_width="0dp"
                android:layout_height="48dp"
                android:layout_margin="2dp"
                android:autofillHints=""
                android:background="@null"
                android:drawableEnd="@drawable/ic_clear"
                android:hint="@string/from"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


            <View
                android:id="@+id/verticalLine"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_margin="12dp"
                android:background="#D3D3D3"
                app:layout_constraintTop_toBottomOf="@id/etFrom"
                tools:layout_editor_absoluteX="12dp" />

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/btnSwap"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_marginEnd="50dp"
                android:src="@drawable/ic_arrow_downward"
                android:text="@string/find_trains"
                app:backgroundTint="@color/white"
                app:borderWidth="2dp"
                app:cornerRadius="30dp"
                app:fabSize="normal"
                app:layout_constraintBottom_toBottomOf="@id/verticalLine"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@id/verticalLine" />

            <EditText
                android:id="@+id/etTo"
                android:layout_width="0dp"
                android:layout_height="48dp"
                android:layout_margin="2dp"
                android:autofillHints=""
                android:background="@null"
                android:drawableEnd="@drawable/ic_clear"
                android:hint="@string/to"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/verticalLine" />


            <Button
                android:id="@+id/btnFindTrains"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="10dp"
                android:backgroundTint="@color/green"
                android:text="@string/find_trains"
                android:textColor="@color/white"
                app:cornerRadius="5dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/etTo" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>


    <androidx.cardview.widget.CardView
        android:id="@+id/cvTrainCode"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        app:cardCornerRadius="8dp"
        app:cardElevation="4dp"
        app:contentPadding="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cdFindExpressTrain">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:backgroundTint="@color/white"
            android:elevation="5dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/cdFindExpressTrain">

            <ImageView
                android:id="@+id/ivTrain"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:padding="3dp"
                android:src="@drawable/ic_train"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

<!--            <EditText-->
<!--                android:layout_width="0dp"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:background="@null"-->
<!--                android:hint="@string/train_no"-->
<!--                android:padding="5dp"-->
<!--                android:textSize="15sp"-->
<!--                app:layout_constraintBottom_toBottomOf="parent"-->
<!--                app:layout_constraintEnd_toStartOf="@+id/ivCancel"-->
<!--                app:layout_constraintStart_toEndOf="@+id/ivTrain"-->
<!--                app:layout_constraintTop_toTopOf="parent" />-->


<!--            <ImageView-->
<!--                android:id="@+id/ivCancel"-->
<!--                android:layout_width="wrap_content"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:layout_margin="8dp"-->
<!--                android:padding="6dp"-->
<!--                android:src="@drawable/ic_clear"-->
<!--                app:layout_constraintBottom_toBottomOf="parent"-->
<!--                app:layout_constraintRight_toLeftOf="@id/searchTrain"-->
<!--                app:layout_constraintTop_toTopOf="parent" />-->

            <EditText
                android:id="@+id/etStation"
                android:layout_width="0dp"
                android:layout_height="48dp"
                android:layout_margin="2dp"
                android:autofillHints=""
                android:background="@null"
                android:drawableEnd="@drawable/ic_clear"
                android:hint="@string/train_no"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/searchTrain"
                app:layout_constraintStart_toEndOf="@+id/ivTrain"
                app:layout_constraintTop_toTopOf="parent" />


            <ImageView
                android:id="@+id/searchTrain"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:src="@drawable/ic_search_logo"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>


    <androidx.cardview.widget.CardView
        android:id="@+id/cvStationCode"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        app:cardCornerRadius="8dp"
        app:cardElevation="4dp"
        app:contentPadding="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cvTrainCode">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:backgroundTint="@color/white"
            android:elevation="5dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/cdFindExpressTrain">

            <ImageView
                android:id="@+id/ivNetwork"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:padding="3dp"
                android:src="@drawable/ic_network"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

<!--            <EditText-->
<!--                android:layout_width="0dp"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:background="@null"-->
<!--                android:hint="@string/station_code"-->
<!--                android:padding="5dp"-->
<!--                android:textSize="15sp"-->
<!--                app:layout_constraintBottom_toBottomOf="parent"-->
<!--                app:layout_constraintEnd_toStartOf="@+id/imageView"-->
<!--                app:layout_constraintStart_toEndOf="@+id/place"-->
<!--                app:layout_constraintTop_toTopOf="parent" />-->


<!--            <ImageView-->
<!--                android:id="@+id/imageView"-->
<!--                android:layout_width="wrap_content"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:layout_margin="8dp"-->
<!--                android:padding="6dp"-->
<!--                android:src="@drawable/ic_clear"-->
<!--                app:layout_constraintBottom_toBottomOf="parent"-->
<!--                app:layout_constraintRight_toLeftOf="@id/searchStation"-->
<!--                app:layout_constraintTop_toTopOf="parent" />-->


            <EditText
                android:id="@+id/etTrainNo"
                android:layout_width="0dp"
                android:layout_height="48dp"
                android:layout_margin="2dp"
                android:autofillHints=""
                android:background="@null"
                android:drawableEnd="@drawable/ic_clear"
                android:hint="@string/station_code"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/searchStation"
                app:layout_constraintStart_toEndOf="@+id/ivNetwork"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/searchStation"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:layout_margin="4dp"
                android:src="@drawable/ic_search_logo"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>


    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:id="@+id/btnPrn"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:text="@string/pnr"
        android:textAlignment="textStart"
        android:paddingStart="55dp"
        app:icon="@drawable/ic_search"
        android:textColor="@color/primary"
        android:backgroundTint="@color/hallow_blue"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btnTicket"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:id="@+id/btnTicket"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:text="@string/ticket"
        android:textAlignment="textStart"
        android:paddingStart="55dp"
        app:cornerRadius="0dp"
        app:icon="@drawable/ic_ticket"
        android:textColor="@color/primary"
        android:backgroundTint="@color/hallow_blue"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btnPrn" />

    <!--    </androidx.constraintlayout.widget.ConstraintLayout>-->

</androidx.constraintlayout.widget.ConstraintLayout>